# autonomous-qa-platform

./: .copilot-context.md  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  MANIFEST.in  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  WINDOWS_QUICK_FIX.md  WINDOWS_SETUP.md  __init__.py  pyproject.toml  setup-windows.bat  setup-windows.ps1  setup.py  tox.ini
.github/workflows/: ci.yml
agents/: __init__.py  rca_agent.py  test_generation_agent.py  test_plan_agent.py
api/: __init__.py
config/: __init__.py  config.yaml
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: WINDOWS_QUICK_FIX.md  WINDOWS_SETUP.md  api.md  architecture.md  configuration.md  development.md
evaluation/: __init__.py  agent_metrics.py
examples/: __init__.py  basic_workflow.py  fastapi_server.py
orchestration/: __init__.py  agent_workflow.py
prompts/: __init__.py  rca_prompt.txt  test_generation_prompt.txt  test_plan_prompt.txt
rag/: __init__.py  embeddings.py  vector_store.py
requirements/: requirements-dev.txt  requirements.txt
scripts/: Makefile
scripts/windows/: setup-windows.bat  setup-windows.ps1
tools/: __init__.py  log_parser.py  playwright_runner.py
